hapus semua file index lama dan siap deploy

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <audio autoplay loop src="audio/cupid.mp3"></audio>
     <div class="flex justify-center bg-[url(/images/bg.jpg)] bg-cover bg-center lg:h-[50vmax] h-[100vmax]">
-        <div class="my-auto p-5 content backdrop-blur-md bg-[rgba(255,0,140,0.23)] rounded-xl drop-shadow-2xl/50">
+        <div class="my-auto p-5 content backdrop-blur-md bg-[rgba(255,0,140,0.23)] rounded-xl  shadow-lg shadow-black/70">
 
             <!-- First Display -->
 
@@ -87,34 +87,50 @@
                 <img class="mx-auto h-60" src="images/3.gif" alt="" />
                 <div id="filmContainer" class="film-container">
                     <ul class="flex justify-evenly flex-wrap">
-                        <li class="" >
-                            <div class="bg-red">
-                                <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/1.webp" alt="Sampai Titik Terakhirmu">
+                        <li class="mt-5" >
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-500  shadow-lg shadow-black/70" src="film/1.webp" alt="Sampai Titik Terakhirmu">
                             </div>
                         </li>
-                        <li class="">
-                            <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/2.webp" alt="Wicked: For Good">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-500  shadow-lg shadow-black/70" src="film/2.webp" alt="Wicked: For Good">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/3.webp" alt="Keadilan (The Verdict)">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600  shadow-lg shadow-black/70" src="film/3.webp" alt="Keadilan (The Verdict)">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/4.webp" alt="Now You See Me: Now You Dont">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600  shadow-lg shadow-black/70" src="film/4.webp" alt="Now You See Me: Now You Dont">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/5.webp" alt="Dopamin">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600  shadow-lg shadow-black/70" src="film/5.webp" alt="Dopamin">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/6.webp" alt="Predator: Badlands">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600  shadow-lg shadow-black/70" src="film/6.webp" alt="Predator: Badlands">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/7.webp" alt="Pangku">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600  shadow-lg shadow-black/70" src="film/7.webp" alt="Pangku">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/8.webp" alt="The Running Man">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600  shadow-lg shadow-black/70" src="film/8.webp" alt="The Running Man">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="film-poster h-40 mt-3 rounded-xl drop-shadow-2xl cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="film/9.webp" alt="Grave Of The Fireflies">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600  shadow-lg shadow-black/70" src="film/9.webp" alt="Grave Of The Fireflies">
+                            </div>
                         </li>
                         <li>
                             <input id="title" class="poppins-bold text-md text-pink-700 mt-3 border-2 border-pink-500 p-2 rounded-md w-85 poppins-normal bg-[rgba(255,255,255,0.5)]"
@@ -145,32 +161,50 @@
                 <img class="mx-auto h-60" src="images/4.gif" alt="" />
                 <div id="filmContainer" class="film-container">
                     <ul class="flex justify-evenly flex-wrap">
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (1).webp" alt="Nasi Padang">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (1).webp" alt="Nasi Padang">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (2).webp" alt="Nasi Goreng">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (2).webp" alt="Nasi Goreng">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (3).webp" alt="Sate Ayam">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (3).webp" alt="Sate Ayam">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (4).webp" alt="Burger">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (4).webp" alt="Burger">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (5).webp" alt="Spicy Chicken">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (5).webp" alt="Spicy Chicken">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (6).webp" alt="Ketoprak">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (6).webp" alt="Ketoprak">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (7).webp" alt="Mie Gacoan">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (7).webp" alt="Mie Gacoan">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (8).webp" alt="Bakso">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (8).webp" alt="Bakso">
+                            </div>
                         </li>
-                        <li class="">
-                            <img class="food-poster w-25 mt-3 rounded-xl drop-shadow-lg cursor-pointer hover:scale-[110%] duration-300 hover:border-pink-500" src="foods/makanan (9).webp" alt="Mie Ayam">
+                        <li class="mt-5">
+                            <div class="cursor-pointer hover:scale-[110%] duration-300">
+                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70" src="foods/makanan (9).webp" alt="Mie Ayam">
+                            </div>
                         </li>
                         <li>
                             <input id="food" class="poppins-bold text-md text-pink-700 mt-3 border-2 border-pink-500 p-2 rounded-md w-85 poppins-normal bg-[rgba(255,255,255,0.5)]"
