fixing background image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <audio autoplay loop src="audio/cupid.mp3"></audio>
-    <div class="flex justify-center bg-[url(/images/bg.jpg)] bg-cover bg-center lg:h-[50vmax] h-[100vmax]">
+    <div class="container flex justify-center bg-cover bg-center lg:h-[50vmax] h-[100vmax]">
         <div class="my-auto p-5 content backdrop-blur-md bg-[rgba(255,0,140,0.23)] rounded-xl  shadow-lg shadow-black/70">
 
             <!-- First Display -->
