benerin bg keenam kalinya

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <title>I Love You</title>
 </head>
 
-<body>
+<body id="body">
     <div class="audio-container p-5">
         <audio id="bgm" autoplay loop src="audio/cupid.mp3"></audio>
         <button id="musicBtn"
-            class="cursor-pointer w-10 h-10 rounded-4xl hover:bg-pink-500 hover:text-white duration-300 bg-white text-pink-500 text-center shadow-lg shadow-black/60">
+            class="cursor-pointer fixed z-10 w-10 h-10 rounded-4xl hover:bg-pink-500 hover:text-white duration-300 bg-white text-pink-500 text-center shadow-lg shadow-black/60">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                 class="bi bi-pause-fill mx-auto" viewBox="0 0 16 16">
                 <path
@@ -122,56 +122,74 @@
                     <ul class="flex justify-evenly flex-wrap">
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-500 shadow-lg shadow-black/70"
-                                    src="film/1.webp" alt="Sampai Titik Terakhirmu" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-500 shadow-lg shadow-black/70"
+                                        src="film/1.webp" alt="Sampai Titik Terakhirmu" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-500 shadow-lg shadow-black/70"
-                                    src="film/2.webp" alt="Wicked: For Good" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-500 shadow-lg shadow-black/70"
+                                        src="film/2.webp" alt="Wicked: For Good" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="film/3.webp" alt="Keadilan (The Verdict)" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="film/3.webp" alt="Keadilan (The Verdict)" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="film/4.webp" alt="Now You See Me: Now You Dont" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="film/4.webp" alt="Now You See Me: Now You Dont" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="film/5.webp" alt="Dopamin" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="film/5.webp" alt="Dopamin" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="film/6.webp" alt="Predator: Badlands" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="film/6.webp" alt="Predator: Badlands" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="film/7.webp" alt="Pangku" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="film/7.webp" alt="Pangku" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="film/8.webp" alt="The Running Man" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="film/8.webp" alt="The Running Man" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="film/9.webp" alt="Grave Of The Fireflies" />
+                                <a href="#nextButton">
+                                    <img class="film-poster h-40 rounded-xl drop-shadow-2xl hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="film/9.webp" alt="Grave Of The Fireflies" />
+                                </a>
                             </div>
                         </li>
                         <li>
@@ -206,56 +224,74 @@
                     <ul class="flex justify-evenly flex-wrap">
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (1).webp" alt="Nasi Padang" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (1).webp" alt="Nasi Padang" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (2).webp" alt="Nasi Goreng" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (2).webp" alt="Nasi Goreng" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (3).webp" alt="Sate Ayam" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (3).webp" alt="Sate Ayam" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (4).webp" alt="Burger" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (4).webp" alt="Burger" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (5).webp" alt="Spicy Chicken" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (5).webp" alt="Spicy Chicken" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (6).webp" alt="Ketoprak" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (6).webp" alt="Ketoprak" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (7).webp" alt="Mie Gacoan" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (7).webp" alt="Mie Gacoan" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (8).webp" alt="Bakso" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (8).webp" alt="Bakso" />
+                                </a>
                             </div>
                         </li>
                         <li class="mt-5">
                             <div class="cursor-pointer hover:scale-[110%] duration-300">
-                                <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
-                                    src="foods/makanan (9).webp" alt="Mie Ayam" />
+                                <a href="#fourthNextButton">
+                                    <img class="food-poster w-25 rounded-xl drop-shadow-lg hover:border-2 hover:border-pink-600 shadow-lg shadow-black/70"
+                                        src="foods/makanan (9).webp" alt="Mie Ayam" />
+                                </a>
                             </div>
                         </li>
                         <li>
