ubah bg kesepuluh kalinya

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>I Love You</title>
 </head>
 
-<body id="body" class="bg-[url(/images/bg1.webp)] bg-cover bg-center h-full">
+<body id="body" class="bg-cover bg-center h-full">
     <div class="audio-container p-5 -z-10">
         <audio id="bgm" autoplay loop src="audio/cupid.mp3"></audio>
         <button id="musicBtn"
