--- a/index.html
+++ b/index.html
@@ -15,17 +15,7 @@
 </head>
 
 <body id="body" class="bg-cover bg-center h-full">
-    <div class="audio-container p-5 -z-10">
-        <audio id="bgm" autoplay loop src="audio/cupid.mp3"></audio>
-        <button id="musicBtn"
-            class="cursor-pointer fixed z-10 w-10 h-10 rounded-4xl hover:bg-pink-500 hover:text-white duration-300 bg-white text-pink-500 text-center shadow-lg shadow-black/60">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                class="bi bi-pause-fill mx-auto" viewBox="0 0 16 16">
-                <path
-                    d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5m5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5" />
-            </svg>
-        </button>
-    </div>
+    
     <div class="container flex justify-center">
         <div
             class="my-auto p-5 content backdrop-blur-md bg-[rgba(255,0,140,0.23)] rounded-xl shadow-lg shadow-black/70">
@@ -349,6 +339,17 @@
             </div>
 
             <!-- Fifth Display End -->
+        </div>
+        <div class="audio-container absolute justify-end m-5">
+            <audio id="bgm" autoplay loop src="audio/cupid.mp3"></audio>
+            <button id="musicBtn"
+                class=" fixed bottom-5 right-5 cursor-pointer w-10 h-10 rounded-4xl hover:bg-pink-500 hover:text-white duration-300 bg-white text-pink-500 text-center shadow-lg shadow-black/60">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                    class="bi bi-pause-fill mx-auto" viewBox="0 0 16 16">
+                    <path
+                        d="M5.5 3.5A1.5 1.5 0 0 1 7 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5m5 0A1.5 1.5 0 0 1 12 5v6a1.5 1.5 0 0 1-3 0V5a1.5 1.5 0 0 1 1.5-1.5" />
+                </svg>
+            </button>
         </div>
     </div>
     <script src="src/script.js"></script>
