--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>I Love You</title>
 </head>
 
-<body id="body" class="bg-cover bg-center h-full">
+<body id="body" class="bg-cover bg-center h-full" style="background-image:url('/images/bg1.webp');">
     
     <div class="container flex justify-center">
         <div
